# laravel/app/Http/Controllers/ShopController.php
@@ -2,12 +2,56 @@
 
 namespace App\Http\Controllers;
 
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Packages\UseCase\Shop\Create\ShopCreateRequest;
+use Packages\UseCase\Shop\Create\ShopCreateUseCaseInterface;
 
 class ShopController extends Controller
 {
-    public function create(Request $request)
-    {
+    /**
+     * @OA\Post(
+     *     path="/api/shop",
+     *     tags={"User/Shop"},
+     *     description="Shopを作成",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/x-www-form-urlencoded",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="name",
+     *                     description="Shop名",
+     *                     type="string",
+     *                     default="メガチュッパ"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="201",
+     *         description="作成したShopのオブジェクト",
+     *     ),
+     *     security={{ "apiAuth": {} }}
+     * )
+     */
+    public function store(
+        Request $request,
+        ShopCreateUseCaseInterface $shopCreateUseCase
+    ): JsonResponse {
+        $userId = auth()->id();
 
+        $shopCreateRequest = new ShopCreateRequest(
+            $request->name,
+            $userId
+        );
+
+        $shopCreateResponse = $shopCreateUseCase($shopCreateRequest);
+
+        return response()->json(
+            $shopCreateResponse->toArray(),
+            201
+        );
     }
 }
